Add core structure for home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>Header</header>
+    <section>
+        main image
+    </section>
+    <section>
+        club ethos
+    </section>
+    <section>
+        Running location, distance and times
+    </section>
+    <footer>
+        social media accounts
+    </footer>
 </body>
 </html>
