--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
         <div id= "hero-image"></div>
         <div id="cover-text">
             <h2>Love Running</h2>
-            <h3>Dublin Docklands & Pheonix Park</h3>
+            <h3>Dublin Docklands & Phoenix Park</h3>
         </div>
     </section>
-    <section>
-        club ethos
+    <section id= "club-ethos">
+        <h1>Why Love Running With Us?</h1>
+        <div id="left-about">Left</div>
+        <div id= "right-about">Right</div>
+        <div id= "center-about">Center</div>
     </section>
     <section>
         Running location, distance and times
