Add style to footer icons and linked external pages

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class= "social-networks">
             <li>
                 <a href="https://facebook.com" target="_blank" rel= "noopener" aria-label= "Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
             </li>
@@ -114,7 +114,7 @@
                 <a href="https://youtube.com" target = "_blank" rel= "noopener" arial-label= "Visit our Youtube page (opens in new tab)"><i class="fab fa-youtube-square"></i></a>
             </li>
             <li>
-                <a href="https://intagram.com" target = "_blank" rel= "noopener" arial-label= "Visit our Instagram page (opens in new tab)"><i class="fab fa-instagram"></i></a>
+                <a href="https://instagram.com" target = "_blank" rel= "noopener" arial-label= "Visit our Instagram page (opens in new tab)"><i class="fab fa-instagram"></i></a>
             </li>
         </ul>
     </footer>
